logs/nps-sdk.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/nps_sdk'...
Listing './lib/python3.5/site-packages/nps_sdk/certs'...
Listing './lib/python3.5/site-packages/nps_sdk/conf'...
Listing './lib/python3.5/site-packages/nps_sdk/wsdl'...
Listing './lib/python3.5/site-packages/nps_sdk-1.1.12.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests/packages'...
Listing './lib/python3.5/site-packages/requests/packages/chardet'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/util'...
Listing './lib/python3.5/site-packages/requests-2.9.1.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.10.0.dist-info'...
Listing './lib/python3.5/site-packages/suds'...
Listing './lib/python3.5/site-packages/suds/bindings'...
Listing './lib/python3.5/site-packages/suds/mx'...
Listing './lib/python3.5/site-packages/suds/sax'...
Listing './lib/python3.5/site-packages/suds/transport'...
Listing './lib/python3.5/site-packages/suds/umx'...
Listing './lib/python3.5/site-packages/suds/xsd'...
Listing './lib/python3.5/site-packages/suds_jurko-0.6.egg-info'...
Listing './lib/python3.5/site-packages/test'...
Compiling './lib/python3.5/site-packages/test/test.py'...
***   File "./lib/python3.5/site-packages/test/test.py", line 331
    print resp
             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/tests'...
Listing './lib/python3.5/site-packages/tests/external'...
Listing './share'...
Listing './share/python-wheels'...
